feat(media): update .gitignore and remove obsolete media sourcing documents

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ claude.md
 
 # Git worktrees
 .worktrees/
+
+# Claude plans & sessions
+.claude/
+
+# Playwright MCP logs & screenshots
+.playwright-mcp/
